# mdatom

./: .Rapp.history  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  coords.final  coords.traj  mdatom  plot.R  präsentation.pptx  results.txt  resultsFor.txt  runPlot.sh
exercises/6.6.1/: coords.inp  params.inp
exercises/6.6.2/: params.inp
exercises/6.6.3/: params.inp
include/: mdprog.h
results/: .Rapp.history  results1.txt  results2.txt  results3.txt  resultsFor1.txt  resultsFor2.txt  resultsFor3.txt
src/: auxiliary.cpp  cenma.cpp  confa.cpp  forcea.cpp  gauss.cpp  langevin.cpp  main.cpp  packa.cpp  random.cpp  runmda.cpp  shia.cpp
